[package]
name = "egui-guitar-widget"
version = "0.2.0"
authors = ["duckfromdiscord"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
tracing-subscriber = "0.3.16"

